@startuml US06-DM
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0

hide circle
hide methods

class "Political Agent" as PoliticalAgent {
    name
    email
    nationalIdentityCard
    taxIdentificationNumber
    mandateStart
    mandateEnd
}

class "Declaration of Interests" as Declaration {
    id
    submissionDate
}

enum DeclarationType {
    INITIAL
    REGULAR
    EXCEPTIONAL
}

enum DeclarationStatus {
    PENDING
    VALIDATED
    REJECTED
}

enum PoliticalFunction {
    MINISTER
    DEPUTY
    COUNCILLOR
    PARISH_COUNCIL_PRESIDENT
    MAYOR
}

class PositionEntry {
    grossSalary
    sideIncomeConsulting
    sideIncomeBoardMemberships
    startDate
    endDate
}

enum PositionNature {
    PUBLIC
    PRIVATE
    SOCIAL
}

class Function {
    designation
}

class Organization {
    name
}

enum OrganizationType {
    COMPANY
    POLITICAL_PARTY
    FOUNDATION
    INSTITUTE
    ASSOCIATION
}

class SubsidyEntry {
    amount
    description
    date
}

class AssetEntry {
    assetValue
}

enum AssetType {
    REAL_ESTATE
    VEHICLES
    STOCKS
}

class "Real Estate" as RealEstate {
    description
    municipality
}

class VehicleAsset {
    description
}

class StockAsset {
    description
}

class BusinessParticipation {
    companyNIF
    totalValueInStocks
    companyPercentage
}

class Attachment {
    fileName
    uploadDate
}

PoliticalAgent "1" -- "1" PoliticalFunction : has
PoliticalAgent "1" -- "*" Declaration : submits

Declaration "*" -- "1" DeclarationType : classified as
Declaration "*" -- "1" DeclarationStatus : has
Declaration "1" -- "1..*" PositionEntry : includes
Declaration "1" -- "*" SubsidyEntry : includes
Declaration "1" -- "*" AssetEntry : includes
Declaration "1" -- "*" BusinessParticipation : includes
Declaration "1" *-- "*" Attachment : has

PositionEntry "*" -- "1" Organization : held at
PositionEntry "*" -- "1" Function : performs
PositionEntry "*" -- "1" PositionNature : has

Organization "*" -- "1" OrganizationType : classified as

SubsidyEntry "*" -- "1" Organization : received from

AssetEntry "*" -- "1" AssetType : classified as
AssetEntry "1" -- "0..1" RealEstate : described by
AssetEntry "1" -- "0..1" VehicleAsset : described by
AssetEntry "1" -- "0..1" StockAsset : described by

BusinessParticipation "*" -- "1" Organization : held in

@enduml
